css/styles.css
html {
    scroll-behavior: smooth;
}

body {
    background-color: #212121;
    font-family: "Helvetica Neue", "Helvetica", sans-serif;
    margin: 0px;
    color: white;
}

body::-webkit-scrollbar {
    display: none;
}

svg {
    fill: white;
}

footer {
    position: relative;
    bottom: 0;
}

/* Navigation */
#nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    width: 100%;
    height: 50px;
    top: 0;
    background-color: #000000;
    z-index: 1;
}

.nav-logo-text {
    max-width: 50px;
    width: 50px;
    padding-left: 15px;
}

.nav-links li {
    list-style: none;
    display: inline-block;
    padding-right: 15px;
    /* padding-top: 10px; */
}

.nav-links a {
    text-decoration: none;
    color: white;
    font-size: 1rem; 
}

.nav-links .active {
    color: #ff001e;
}

.nav-links a:hover {
    color: #ff001e;
}

/* Main - Landing */
#main-landing {
    background: url("https://w.wallhaven.cc/full/zm/wallhaven-zm832v.jpg");
    background-size: cover;
    height: 100vh;
    display: block;
}

#main-transparent-overlay {
    background-color: rgba(17, 17, 17, 0.603);
    height: 100vh;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}
.main-landing-intro {
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 3px solid white;
    padding: 0px 10px 50px 10px;
    margin: 0px 15px 10px 15px;
    max-width: 400px;
    max-height: 500px;
}

.logo {
    max-width: 250px;
    width: 100%;
    fill: white;
}

.logo-breath {
    animation-name: logo-animation;
    animation-duration: 4s;
    animation-iteration-count: infinite;
}

@keyframes logo-animation {
    0% {fill: #9b0000;}
    50% {fill: #ff001e;}
    100% {fill: #9b0000;}
  }

.intro-text {
    text-align: center;
    font-size: 1rem;
}

.intro-text h1 {
    font-family: 'Lato', sans-serif;
    font-weight: 900;
    text-transform: uppercase;
}

.intro-text h2 {
    letter-spacing: 0.2em;
    font-size: 20px;
}

.social-container {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin-top: 10px;
    width: 300px;
}

.social-link {
    border: 2px solid white;
    background-color: rgba(24, 24, 24, 0.534);
    display: flex;
    flex-wrap: wrap;
}

.social-link svg {
    min-width: 20px;
    min-height: 20px;
    max-width: 50px;
    max-height: 50px;
    padding: 10px;
    width: 100%;
    height: 100%;
}

.social-link:hover svg{
    transform: scale(1.2);
    transition: 0.5s;
}

/* About Me page */
.about-me-container {
    display: flex;
    align-items: flex-end;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin: 80px 50px 10px 50px;
}

.about-me-profile {  
    max-height: 400px;
    max-width: 400px;
    height: 50%;
    width: 50%; 
    border-radius: 50%;
}

.about-me-skillset {
    font-size: 1.2em;
    margin: 10px;
    height: 100%;
    width: auto;
    height: 100%;
}

.skill-set {
    display: flex;
    justify-content: center;
}

.location {
    font-weight: bold;
}

.location:hover {
    color:  #ff001e;
    transition: 1s;
}

.about-me-text ul li {
    list-style: none;
}

.list-items li {
    display: inline-block;
    margin: 5px 5px 5px 5px;
}

.list-items li:hover {
    color:  #ff001e;
    -webkit-user-select: none;
    transition: 1s;
}

.secondment-styling {
    font-style: italic;
    font-size: 15px;
}

/* Contact Form */

.contact-find-me {
    margin-top: 100px;
    text-align: center;
}

.chevron-container {
    margin-top: 50px;
    display: flex;
    justify-content: center;
}

.chevron-dd {
    fill: white;
    max-height: 100px;
    max-width: 100px;
    height: 10vh;
    width: 10vh;
    animation-duration: 2s;
    animation-iteration-count: infinite;
}

.chevron-bounce {
    animation-name: bounce;
    animation-timing-function: linear;
}
@keyframes bounce {
    0%   { transform: translateY(0); }
    50%  { transform: translateY(-20px); }
    100% { transform: translateY(0); }
}

.contact-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.contact-social svg {
    width: 100px;
    height: 100px;
}

.contact-social svg:hover {
    transform: scale(1.2);
    transition: 0.5s;
}

.contact-social {
    margin: 50px;
}

.contact-form-container {
    width: 100%;
}

/* Blog Page */
.article-container {
    margin: 80px 50px 10px 50px;
}

.article-container article {
    margin-bottom: 50px;
}

.article-container img {
    width: 100%;
    height: auto;
}

.breaker {
    background-color: red;
    height: 1px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    
}

/* Projects page  */
.projects-container {
    margin: 80px 15px 10px 15px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.project {
    width: 350px;
    height: 150px;
    background-color: rgb(24, 24, 24);
    margin: 10px;
    display: flex;
    align-items: center;
    text-decoration: none;
    color: white;
}

.project * {
    margin: 0px;
}

.project svg {
    fill: white;
    padding-left: 30px;
}

.project:hover svg {
    fill: #ff001e;
    transition: 1s;
}

.project .divider {
    width: 1px;
    height: 80px;
    background-color: white;
    margin: 0px 10px 0px 10px;
}

